vpc-module/main.tf
terraform {
  required_version = ">= 0.10.3" # introduction of Local Values configuration language feature
}

locals {
  max_subnet_length  = "${max(length(var.private_subnets), length(var.elasticache_subnets), length(var.database_subnets), length(var.redshift_subnets))}"
  nat_gateway_count  = "${var.single_nat_gateway ? 1 : (var.one_nat_gateway_per_az ? length(var.azs) : local.max_subnet_length)}"
  nat_instance_count = "${var.single_nat_instance ? 1 : (var.one_nat_instance_per_az ? length(var.azs) : local.max_subnet_length)}"
}

######
# VPC
######
resource "aws_vpc" "this" {
  count = "${var.create_vpc ? 1 : 0}"

  cidr_block           = "${var.cidr}"
  instance_tenancy     = "${var.instance_tenancy}"
  enable_dns_hostnames = "${var.enable_dns_hostnames}"
  enable_dns_support   = "${var.enable_dns_support}"

  tags = "${merge(var.tags, var.vpc_tags, map("Name", format("%s", var.name)))}"
}

###################
# DHCP Options Set
###################
resource "aws_vpc_dhcp_options" "this" {
  count = "${var.create_vpc && var.enable_dhcp_options ? 1 : 0}"

  domain_name          = "${var.dhcp_options_domain_name}"
  domain_name_servers  = ["${var.dhcp_options_domain_name_servers}"]
  ntp_servers          = ["${var.dhcp_options_ntp_servers}"]
  netbios_name_servers = ["${var.dhcp_options_netbios_name_servers}"]
  netbios_node_type    = "${var.dhcp_options_netbios_node_type}"

  tags = "${merge(var.tags, var.dhcp_options_tags, map("Name", format("%s", var.name)))}"
}

###############################
# DHCP Options Set Association
###############################
resource "aws_vpc_dhcp_options_association" "this" {
  count = "${var.create_vpc && var.enable_dhcp_options ? 1 : 0}"

  vpc_id          = "${aws_vpc.this.id}"
  dhcp_options_id = "${aws_vpc_dhcp_options.this.id}"
}

###################
# Internet Gateway
###################
resource "aws_internet_gateway" "this" {
  count = "${var.create_vpc && length(var.public_subnets) > 0 ? 1 : 0}"

  vpc_id = "${aws_vpc.this.id}"

  tags = "${merge(var.tags, map("Name", format("%s", var.name)))}"
}

################
# Publiс routes
################
resource "aws_route_table" "public" {
  count = "${var.create_vpc && length(var.public_subnets) > 0 ? 1 : 0}"

  vpc_id = "${aws_vpc.this.id}"

  tags = "${merge(var.tags, var.public_route_table_tags, map("Name", format("%s-public", var.name)))}"
}

resource "aws_route" "public_internet_gateway" {
  count = "${var.create_vpc && length(var.public_subnets) > 0 ? 1 : 0}"

  route_table_id         = "${aws_route_table.public.id}"
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = "${aws_internet_gateway.this.id}"

  timeouts {
    create = "5m"
  }
}

#################
# Private routes
# There are so many routing tables as the largest amount of subnets of each type (really?)
#################
resource "aws_route_table" "private" {
  count = "${var.create_vpc && local.max_subnet_length > 0 ? local.nat_instance_count : 0}"

  vpc_id = "${aws_vpc.this.id}"

  tags = "${merge(var.tags, var.private_route_table_tags, map("Name", (var.single_nat_instance ? "${var.name}-private" : format("%s-private-%s", var.name, element(var.azs, count.index)))))}"

  lifecycle {
    # When attaching VPN gateways it is common to define aws_vpn_gateway_route_propagation
    # resources that manipulate the attributes of the routing table (typically for the private subnets)
    ignore_changes = ["propagating_vgws"]
  }
}

################
# Public subnet
################
resource "aws_subnet" "public" {
  count = "${var.create_vpc && length(var.public_subnets) > 0 && (!var.one_nat_instance_per_az || length(var.public_subnets) >= length(var.azs)) ? length(var.public_subnets) : 0}"

  vpc_id                  = "${aws_vpc.this.id}"
  cidr_block              = "${var.public_subnets[count.index]}"
  availability_zone       = "${element(var.azs, count.index)}"
  map_public_ip_on_launch = "${var.map_public_ip_on_launch}"

  tags = "${merge(var.tags, var.public_subnet_tags, map("Name", format("%s-public-%s", var.name, element(var.azs, count.index))))}"
}

#################
# Private subnet
#################
resource "aws_subnet" "private" {
  count = "${var.create_vpc && length(var.private_subnets) > 0 ? length(var.private_subnets) : 0}"

  vpc_id            = "${aws_vpc.this.id}"
  cidr_block        = "${var.private_subnets[count.index]}"
  availability_zone = "${element(var.azs, count.index)}"

  tags = "${merge(var.tags, var.private_subnet_tags, map("Name", format("%s-private-%s", var.name, element(var.azs, count.index))))}"
}

##################
# Database subnet
##################
resource "aws_subnet" "database" {
  count = "${var.create_vpc && length(var.database_subnets) > 0 ? length(var.database_subnets) : 0}"

  vpc_id            = "${aws_vpc.this.id}"
  cidr_block        = "${var.database_subnets[count.index]}"
  availability_zone = "${element(var.azs, count.index)}"

  tags = "${merge(var.tags, var.database_subnet_tags, map("Name", format("%s-db-%s", var.name, element(var.azs, count.index))))}"
}

resource "aws_db_subnet_group" "database" {
  count = "${var.create_vpc && length(var.database_subnets) > 0 && var.create_database_subnet_group ? 1 : 0}"

  name        = "${lower(var.name)}"
  description = "Database subnet group for ${var.name}"
  subnet_ids  = ["${aws_subnet.database.*.id}"]

  tags = "${merge(var.tags, map("Name", format("%s", var.name)))}"
}

##################
# Redshift subnet
##################
resource "aws_subnet" "redshift" {
  count = "${var.create_vpc && length(var.redshift_subnets) > 0 ? length(var.redshift_subnets) : 0}"

  vpc_id            = "${aws_vpc.this.id}"
  cidr_block        = "${var.redshift_subnets[count.index]}"
  availability_zone = "${element(var.azs, count.index)}"

  tags = "${merge(var.tags, var.redshift_subnet_tags, map("Name", format("%s-redshift-%s", var.name, element(var.azs, count.index))))}"
}

resource "aws_redshift_subnet_group" "redshift" {
  count = "${var.create_vpc && length(var.redshift_subnets) > 0 ? 1 : 0}"

  name        = "${var.name}"
  description = "Redshift subnet group for ${var.name}"
  subnet_ids  = ["${aws_subnet.redshift.*.id}"]

  tags = "${merge(var.tags, map("Name", format("%s", var.name)))}"
}

#####################
# ElastiCache subnet
#####################
resource "aws_subnet" "elasticache" {
  count = "${var.create_vpc && length(var.elasticache_subnets) > 0 ? length(var.elasticache_subnets) : 0}"

  vpc_id            = "${aws_vpc.this.id}"
  cidr_block        = "${var.elasticache_subnets[count.index]}"
  availability_zone = "${element(var.azs, count.index)}"

  tags = "${merge(var.tags, var.elasticache_subnet_tags, map("Name", format("%s-elasticache-%s", var.name, element(var.azs, count.index))))}"
}

resource "aws_elasticache_subnet_group" "elasticache" {
  count = "${var.create_vpc && length(var.elasticache_subnets) > 0 ? 1 : 0}"

  name        = "${var.name}"
  description = "ElastiCache subnet group for ${var.name}"
  subnet_ids  = ["${aws_subnet.elasticache.*.id}"]
}

##############
# NAT Gateway
##############
# Workaround for interpolation not being able to "short-circuit" the evaluation of the conditional branch that doesn't end up being used
# Source: https://github.com/hashicorp/terraform/issues/11566#issuecomment-289417805
#
# The logical expression would be
#
#    nat_gateway_ips = var.reuse_nat_ips ? var.external_nat_ip_ids : aws_eip.nat.*.id
#
# but then when count of aws_eip.nat.*.id is zero, this would throw a resource not found error on aws_eip.nat.*.id.
locals {
  nat_gateway_ips = "${split(",", (var.reuse_nat_ips ? join(",", var.external_nat_ip_ids) : join(",", aws_eip.nat.*.id)))}"
}

resource "aws_eip" "nat" {
  count = "${var.create_vpc && (var.enable_nat_gateway && !var.reuse_nat_ips) ? local.nat_gateway_count : 0}"

  vpc = true

  tags = "${merge(var.tags, map("Name", format("%s-%s", var.name, element(var.azs, (var.single_nat_gateway ? 0 : count.index)))))}"
}

resource "aws_nat_gateway" "this" {
  count = "${var.create_vpc && var.enable_nat_gateway ? local.nat_gateway_count : 0}"

  allocation_id = "${element(local.nat_gateway_ips, (var.single_nat_gateway ? 0 : count.index))}"
  subnet_id     = "${element(aws_subnet.public.*.id, (var.single_nat_gateway ? 0 : count.index))}"

  tags = "${merge(var.tags, map("Name", format("%s-%s", var.name, element(var.azs, (var.single_nat_gateway ? 0 : count.index)))))}"

  depends_on = ["aws_internet_gateway.this"]
}

resource "aws_route" "private_nat_gateway" {
  count = "${var.create_vpc && var.enable_nat_gateway ? local.nat_gateway_count : 0}"

  route_table_id         = "${element(aws_route_table.private.*.id, count.index)}"
  destination_cidr_block = "0.0.0.0/0"
  nat_gateway_id         = "${element(aws_nat_gateway.this.*.id, count.index)}"

  timeouts {
    create = "5m"
  }
}

######################
# VPC Endpoint for S3
######################
data "aws_vpc_endpoint_service" "s3" {
  count = "${var.create_vpc && var.enable_s3_endpoint ? 1 : 0}"

  service = "s3"
}

resource "aws_vpc_endpoint" "s3" {
  count = "${var.create_vpc && var.enable_s3_endpoint ? 1 : 0}"

  vpc_id       = "${aws_vpc.this.id}"
  service_name = "${data.aws_vpc_endpoint_service.s3.service_name}"
}

resource "aws_vpc_endpoint_route_table_association" "private_s3" {
  count = "${var.create_vpc && var.enable_s3_endpoint ? local.nat_instance_count : 0}"

  vpc_endpoint_id = "${aws_vpc_endpoint.s3.id}"
  route_table_id  = "${element(aws_route_table.private.*.id, count.index)}"
}

resource "aws_vpc_endpoint_route_table_association" "public_s3" {
  count = "${var.create_vpc && var.enable_s3_endpoint && length(var.public_subnets) > 0 ? 1 : 0}"

  vpc_endpoint_id = "${aws_vpc_endpoint.s3.id}"
  route_table_id  = "${aws_route_table.public.id}"
}

############################
# VPC Endpoint for DynamoDB
############################
data "aws_vpc_endpoint_service" "dynamodb" {
  count = "${var.create_vpc && var.enable_dynamodb_endpoint ? 1 : 0}"

  service = "dynamodb"
}

resource "aws_vpc_endpoint" "dynamodb" {
  count = "${var.create_vpc && var.enable_dynamodb_endpoint ? 1 : 0}"

  vpc_id       = "${aws_vpc.this.id}"
  service_name = "${data.aws_vpc_endpoint_service.dynamodb.service_name}"
}

resource "aws_vpc_endpoint_route_table_association" "private_dynamodb" {
  count = "${var.create_vpc && var.enable_dynamodb_endpoint ? local.nat_instance_count : 0}"

  vpc_endpoint_id = "${aws_vpc_endpoint.dynamodb.id}"
  route_table_id  = "${element(aws_route_table.private.*.id, count.index)}"
}

resource "aws_vpc_endpoint_route_table_association" "public_dynamodb" {
  count = "${var.create_vpc && var.enable_dynamodb_endpoint && length(var.public_subnets) > 0 ? 1 : 0}"

  vpc_endpoint_id = "${aws_vpc_endpoint.dynamodb.id}"
  route_table_id  = "${aws_route_table.public.id}"
}

############################
# VPC Endpoint for SecretsManager
############################
data "aws_vpc_endpoint_service" "secrets_manager" {
  count   = "${var.create_vpc && var.enable_secrets_manager_endpoint ? 1 : 0}"
  service = "secretsmanager"
}

resource "aws_vpc_endpoint_subnet_association" "secrets_manager_public" {
  count           = "${var.create_vpc && var.enable_secrets_manager_endpoint ? length(var.public_subnets) : 0}"
  vpc_endpoint_id = "${aws_vpc_endpoint.secrets_manager_public.id}"
  subnet_id       = "${element(aws_subnet.public.*.id,  count.index)}"
}

resource "aws_vpc_endpoint" "secrets_manager_public" {
  count = "${var.create_vpc && var.enable_secrets_manager_endpoint && length(var.public_subnets) > 0 ? 1 : 0}"

  vpc_endpoint_type  = "Interface"
  vpc_id             = "${aws_vpc.this.id}"
  service_name       = "${data.aws_vpc_endpoint_service.secrets_manager.service_name}"
  security_group_ids = ["${aws_security_group.secrets_manager.id}"]

  subnet_ids = ["${aws_subnet.public.*.id}"]
}

resource "aws_vpc_endpoint_subnet_association" "secrets_manager_private" {
  count           = "${var.create_vpc && var.enable_secrets_manager_endpoint ? length(var.public_subnets) : 0}"
  vpc_endpoint_id = "${aws_vpc_endpoint.secrets_manager_private.id}"
  subnet_id       = "${element(aws_subnet.private.*.id,  count.index)}"
}

resource "aws_vpc_endpoint" "secrets_manager_private" {
  count = "${var.create_vpc && var.enable_secrets_manager_endpoint &&  length(var.private_subnets) > 0  ? 1 : 0}"

  vpc_endpoint_type   = "Interface"
  vpc_id              = "${aws_vpc.this.id}"
  service_name        = "${data.aws_vpc_endpoint_service.secrets_manager.service_name}"
  security_group_ids  = ["${aws_security_group.secrets_manager.id}"]
  private_dns_enabled = true

  subnet_ids = ["${aws_subnet.private.*.id}"]
}

resource "aws_security_group" "secrets_manager" {
  count       = "${var.create_vpc && var.enable_secrets_manager_endpoint ? 1 : 0}"
  name        = "allow_secrets_manager"
  description = "Allow secrets_manager inbound traffic"
  vpc_id      = "${aws_vpc.this.id}"

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["${aws_vpc.this.cidr_block}", "0.0.0.0/0"]
  }

  egress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["${aws_vpc.this.cidr_block}", "0.0.0.0/0"]
  }
}

############################
# VPC Endpoint for exectute api
############################
data "aws_vpc_endpoint_service" "execute_api" {
  count   = "${var.create_vpc && var.enable_execute_api_endpoint ? 1 : 0}"
  service = "execute-api"
}

resource "aws_vpc_endpoint" "execute_api" {
  count               = "${var.create_vpc && var.enable_execute_api_endpoint ? 1 : 0}"
  private_dns_enabled = true
  vpc_endpoint_type   = "Interface"
  vpc_id              = "${aws_vpc.this.id}"
  service_name        = "${data.aws_vpc_endpoint_service.execute_api.service_name}"
  security_group_ids  = ["${aws_security_group.secrets_manager.id}"]

  subnet_ids = [
    "${aws_subnet.public.*.id}",
    "${aws_subnet.private.*.id}",
    "${aws_subnet.database.*.id}",
  ]
}

resource "aws_security_group" "execute_api" {
  count       = "${var.create_vpc && var.enable_execute_api_endpoint ? 1 : 0}"
  name        = "allow_execute_api"
  description = "Allow execute_api inbound traffic"
  vpc_id      = "${aws_vpc.this.id}"

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["${aws_vpc.this.cidr_block}", "0.0.0.0/0"]
  }

  egress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["${aws_vpc.this.cidr_block}", "0.0.0.0/0"]
  }
}

############################
# VPC Endpoint for logs
############################
data "aws_vpc_endpoint_service" "logs" {
  count   = "${var.create_vpc && var.enable_logs_endpoint ? 1 : 0}"
  service = "logs"
}

resource "aws_vpc_endpoint" "logs" {
  count             = "${var.create_vpc && var.enable_logs_endpoint ? 1 : 0}"
  vpc_endpoint_type = "Interface"
  vpc_id            = "${aws_vpc.this.id}"

  security_group_ids = ["${aws_security_group.logs.id}"]

  service_name = "${data.aws_vpc_endpoint_service.logs.service_name}"

  subnet_ids = ["${aws_subnet.private.*.id}"]

  private_dns_enabled = true
}

resource "aws_security_group" "logs" {
  count       = "${var.create_vpc && var.enable_logs_endpoint ? 1 : 0}"
  name        = "allow_logs"
  description = "Allow logs inbound traffic"
  vpc_id      = "${aws_vpc.this.id}"

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["${aws_vpc.this.cidr_block}", "0.0.0.0/0"]
  }

  egress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["${aws_vpc.this.cidr_block}", "0.0.0.0/0"]
  }
}

############################
# VPC Endpoint for SNS
############################
data "aws_vpc_endpoint_service" "sns" {
  count   = "${var.create_vpc && var.enable_sns_endpoint ? 1 : 0}"
  service = "sns"
}

resource "aws_vpc_endpoint" "sns" {
  count             = "${var.create_vpc && var.enable_sns_endpoint ? 1 : 0}"
  vpc_endpoint_type = "Interface"
  vpc_id            = "${aws_vpc.this.id}"

  security_group_ids = ["${aws_security_group.sns.id}"]

  service_name = "${data.aws_vpc_endpoint_service.sns.service_name}"

  subnet_ids = ["${aws_subnet.private.*.id}"]

  private_dns_enabled = true
}

resource "aws_security_group" "sns" {
  count       = "${var.create_vpc && var.enable_sns_endpoint ? 1 : 0}"
  name        = "allow_sns"
  description = "Allow sns inbound traffic"
  vpc_id      = "${aws_vpc.this.id}"

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["${aws_vpc.this.cidr_block}", "0.0.0.0/0"]
  }

  egress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["${aws_vpc.this.cidr_block}", "0.0.0.0/0"]
  }
}

############################
# VPC Endpoint for sqs
############################
data "aws_vpc_endpoint_service" "sqs" {
  count   = "${var.create_vpc && var.enable_sqs_endpoint ? 1 : 0}"
  service = "sqs"
}

resource "aws_vpc_endpoint" "sqs" {
  count             = "${var.create_vpc && var.enable_sqs_endpoint ? 1 : 0}"
  vpc_endpoint_type = "Interface"
  vpc_id            = "${aws_vpc.this.id}"

  security_group_ids = ["${aws_security_group.sqs.id}"]

  service_name = "${data.aws_vpc_endpoint_service.sqs.service_name}"

  private_dns_enabled = true

  subnet_ids = ["${aws_subnet.private.*.id}"]
}

resource "aws_security_group" "sqs" {
  count       = "${var.create_vpc && var.enable_sqs_endpoint ? 1 : 0}"
  name        = "allow_sqs"
  description = "Allow sqs inbound traffic"
  vpc_id      = "${aws_vpc.this.id}"

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["${aws_vpc.this.cidr_block}", "0.0.0.0/0"]
  }

  egress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["${aws_vpc.this.cidr_block}", "0.0.0.0/0"]
  }
}

##########################
# Route table association
##########################
resource "aws_route_table_association" "private" {
  count = "${var.create_vpc && length(var.private_subnets) > 0 ? length(var.private_subnets) : 0}"

  subnet_id      = "${element(aws_subnet.private.*.id, count.index)}"
  route_table_id = "${element(aws_route_table.private.*.id, (var.single_nat_instance ? 0 : count.index))}"
}

resource "aws_route_table_association" "database" {
  count = "${var.create_vpc && length(var.database_subnets) > 0 ? length(var.database_subnets) : 0}"

  subnet_id      = "${element(aws_subnet.database.*.id, count.index)}"
  route_table_id = "${element(aws_route_table.private.*.id, (var.single_nat_instance ? 0 : count.index))}"
}

resource "aws_route_table_association" "redshift" {
  count = "${var.create_vpc && length(var.redshift_subnets) > 0 ? length(var.redshift_subnets) : 0}"

  subnet_id      = "${element(aws_subnet.redshift.*.id, count.index)}"
  route_table_id = "${element(aws_route_table.private.*.id, (var.single_nat_instance ? 0 : count.index))}"
}

resource "aws_route_table_association" "elasticache" {
  count = "${var.create_vpc && length(var.elasticache_subnets) > 0 ? length(var.elasticache_subnets) : 0}"

  subnet_id      = "${element(aws_subnet.elasticache.*.id, count.index)}"
  route_table_id = "${element(aws_route_table.private.*.id, (var.single_nat_instance ? 0 : count.index))}"
}

resource "aws_route_table_association" "public" {
  count = "${var.create_vpc && length(var.public_subnets) > 0 ? length(var.public_subnets) : 0}"

  subnet_id      = "${element(aws_subnet.public.*.id, count.index)}"
  route_table_id = "${aws_route_table.public.id}"
}

##############
# VPN Gateway
##############
resource "aws_vpn_gateway" "this" {
  count = "${var.create_vpc && var.enable_vpn_gateway ? 1 : 0}"

  vpc_id          = "${aws_vpc.this.id}"
  amazon_side_asn = "64520"

  tags = "${merge(
    var.tags,
    var.vpn_gateway_tags,
    map("Name", format("%s", var.name)
    ))}"
}

resource "aws_vpn_gateway_attachment" "this" {
  count = "${var.vpn_gateway_id != "" ? 1 : 0}"

  vpc_id         = "${aws_vpc.this.id}"
  vpn_gateway_id = "${var.vpn_gateway_id}"
}

resource "aws_vpn_gateway_route_propagation" "public" {
  count = "${var.create_vpc && var.propagate_public_route_tables_vgw && (var.enable_vpn_gateway  || var.vpn_gateway_id != "") ? 1 : 0}"

  route_table_id = "${element(aws_route_table.public.*.id, count.index)}"
  vpn_gateway_id = "${element(concat(aws_vpn_gateway.this.*.id, aws_vpn_gateway_attachment.this.*.vpn_gateway_id), count.index)}"
}

resource "aws_vpn_gateway_route_propagation" "private" {
  count = "${var.create_vpc && var.propagate_private_route_tables_vgw && (var.enable_vpn_gateway || var.vpn_gateway_id != "") ? length(var.private_subnets) : 0}"

  route_table_id = "${element(aws_route_table.private.*.id, count.index)}"
  vpn_gateway_id = "${element(concat(aws_vpn_gateway.this.*.id, aws_vpn_gateway_attachment.this.*.vpn_gateway_id), count.index)}"
}

###########
# Defaults
###########
resource "aws_default_vpc" "this" {
  count = "${var.manage_default_vpc ? 1 : 0}"

  enable_dns_support   = "${var.default_vpc_enable_dns_support}"
  enable_dns_hostnames = "${var.default_vpc_enable_dns_hostnames}"
  enable_classiclink   = "${var.default_vpc_enable_classiclink}"

  tags = "${merge(var.tags, var.default_vpc_tags, map("Name", format("%s", var.default_vpc_name)))}"
}

###################
# Cisco CST Lambda
###################

resource "aws_iam_role" "iam_for_lambda" {
  count = "${var.enable_vpn_lambda ? 1:0}"
  name  = "iam_for_lambda"

  assume_role_policy = <<EOF
{
  "Version": "2012-10-17",
  "Statement": [
    {
      "Action": "sts:AssumeRole",
      "Principal": {
        "Service": "lambda.amazonaws.com"
      },
      "Effect": "Allow",
      "Sid": ""
    }
  ]
}
EOF
}

resource "aws_iam_role_policy" "iam_for_lambda" {
  count  = "${var.enable_vpn_lambda ? 1:0}"
  name   = "MY_Labda_funcation_permission"
  role   = "${aws_iam_role.iam_for_lambda.id}"
  policy = "${data.aws_iam_policy_document.iam_for_lambda.json}"
}

data "aws_iam_policy_document" "iam_for_lambda" {
  statement {
    actions = [
      "s3:PutObject",
      "s3:PutObjectAcl",
      "s3:GetObject",
    ]

    resources = [
      "arn:aws:s3:::${var.bucket_name}/${var.bucket_prefix}*",
    ]

    effect = "Allow"
  }

  statement {
    actions = [
      "kms:Decrypt",
      "kms:GenerateDataKey*",
      "kms:Encrypt",
    ]

    resources = ["*"]
    effect    = "Allow"
  }

  statement {
    actions = [
      "ec2:Describe*",
      "ec2:CreateTags",
      "ec2:CreateCustomerGateway",
      "ec2:DeleteCustomerGateway",
      "ec2:CreateVpnConnection",
      "ec2:DeleteVpnConnection",
    ]

    resources = ["*"]
    effect    = "Allow"
  }

  statement {
    actions = [
      "logs:CreateLogGroup",
      "logs:CreateLogStream",
      "logs:PutLogEvents",
    ]

    resources = [
      "arn:aws:logs:${var.region}:${var.account_id}:log-group:/aws/lambda/*",
    ]

    effect = "Allow"
  }
}

resource "aws_lambda_function" "vpn_connector" {
  count            = "${var.enable_vpn_lambda ? 1:0}"
  filename         = "${path.module}/transit-vpc-poller.zip"
  function_name    = "transit-vpc-pollar"
  role             = "${aws_iam_role.iam_for_lambda.arn}"
  handler          = "transit-vpc-poller.lambda_handler"
  source_code_hash = "${base64sha256(file("${path.module}/transit-vpc-poller.zip"))}"
  runtime          = "python2.7"
  timeout          = "120"

  environment {
    variables = {
      BUCKET_NAME   = "${var.bucket_name}"
      BUCKET_PREFIX = "${var.bucket_prefix}"
      CONFIG_FILE   = "${var.config_file}"
      LOG_LEVEL     = "INFO"
    }
  }
}

resource "aws_cloudwatch_event_rule" "every_one_minutes" {
  count               = "${var.enable_vpn_lambda ? 1:0}"
  name                = "every-one-minutes"
  description         = "Fires every one minutes"
  schedule_expression = "cron(* * * * ? *)"
}

resource "aws_cloudwatch_event_target" "Execute_lambda_every_one_minutes" {
  count     = "${var.enable_vpn_lambda ? 1:0}"
  rule      = "${aws_cloudwatch_event_rule.every_one_minutes.name}"
  target_id = "Execute_lambda"
  arn       = "${aws_lambda_function.vpn_connector.arn}"
}

resource "aws_lambda_permission" "allow_cloudwatch_to_execute_lambda" {
  count         = "${var.enable_vpn_lambda ? 1:0}"
  statement_id  = "AllowExecutionFromCloudWatch"
  action        = "lambda:InvokeFunction"
  function_name = "${aws_lambda_function.vpn_connector.function_name}"
  principal     = "events.amazonaws.com"
  source_arn    = "${aws_cloudwatch_event_rule.every_one_minutes.arn}"
}

###################
# NAT Instance
###################

locals {
  nat_instance_ips = "${split(",", (var.reuse_nat_ips ? join(",", var.external_nat_ip_ids) : join(",", aws_eip.nat_instance.*.id)))}"
}

resource "aws_eip" "nat_instance" {
  count = "${var.create_vpc && (var.enable_nat_instance && !var.reuse_nat_ips) ? local.nat_instance_count : 0}"

  vpc = true

  tags = "${merge(var.tags, map("Name", format("%s-%s", var.name, element(var.azs, (var.single_nat_instance ? 0 : count.index)))))}"
}

resource "aws_eip_association" "eip_assoc" {
  count = "${var.create_vpc && (var.enable_nat_instance && !var.reuse_nat_ips) ? local.nat_instance_count : 0}"

  instance_id   = "${element(aws_instance.web.*.id, count.index)}"
  allocation_id = "${element(aws_eip.nat_instance.*.id, count.index)}"
}

resource "aws_security_group" "nat_instance" {
  vpc_id = "${aws_vpc.this.id}"

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["${var.cidr}"]
  }

  ingress {
    from_port   = 3306
    to_port     = 3306
    protocol    = "tcp"
    cidr_blocks = ["${var.cidr}"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["${var.nat_ecgress_cidrs}"]
  }
}

resource "aws_instance" "web" {
  count = "${var.create_vpc && var.enable_nat_instance ? local.nat_instance_count : 0}"

  ami                    = "ami-01623d7b"
  instance_type          = "t2.small"
  vpc_security_group_ids = ["${aws_security_group.nat_instance.id}"]
  subnet_id              = "${element(aws_subnet.public.*.id, (var.single_nat_instance ? 0 : count.index))}"

  tags              = "${merge(var.tags, map("Name", format("nat-instance-%s-%s", var.name, element(var.azs, (var.single_nat_instance ? 0 : count.index)))))}"
  source_dest_check = "false"

  depends_on = ["aws_internet_gateway.this"]
}

resource "aws_route" "private_nat_instance" {
  count = "${var.create_vpc && var.enable_nat_instance ? local.nat_instance_count : 0}"

  route_table_id         = "${element(aws_route_table.private.*.id, count.index)}"
  destination_cidr_block = "0.0.0.0/0"
  network_interface_id   = "${element(aws_instance.web.*.primary_network_interface_id, count.index)}"

  timeouts {
    create = "5m"
  }
}
